# website-dioxus

./: .gitignore  .prettierignore  .prettierrc.toml  Cargo.toml  Dioxus.toml  LICENSE  LICENSE.txt  README.md  index.html  package-lock.json  package.json  rustfmt.toml
assets/: app-nav.css  stylesheet.css
assets/nav/: nav.css
merge/: credits.txt
merge/merged/: index.html
public/: stylesheet.css
src/: lib.rs  main.rs  route.rs
src/components/: about.rs  animation.rs  app.rs  colophon.rs  footer.rs  home.rs  mod.rs  nav.rs  nav_bar.rs  page_not_found.rs  page_template.rs
src/components/about/: mod.rs
src/components/animation/: mod.rs
src/components/app/: mod.rs
src/components/benefits/: mod.rs
src/components/colophon/: mod.rs
src/components/footer/: mod.rs
src/components/home/: mod.rs
src/components/nav/: mod.rs
src/components/template/: mod.rs
static/: index.html  stylesheet.css
static/about/: index.html
static/colophon/: index.html
