[package]
authors = ["David Wallace Croft <david@croftsoft.com>"]
# Use the categories from https://crates.io/categories
# categories = ["category-name"]
description = "Dallas Rust User Meetup website using Dioxus"
edition = "2021"
homepage = "https://www.dallasrust.org/"
keywords = ["dioxus"]
license = "MIT"
name = "website-dioxus"
publish = false
readme = "README.md"
repository = "https://github.com/dallasrust/website-dioxus"
version = "0.0.2-SNAPSHOT"

[[bin]]
name = "prerender"
required-features = ["prerender"]

[dependencies]
console_error_panic_hook = "0.1.7"
dioxus = "0.4.0"
dioxus-router = "0.4.1"
dioxus-ssr = { version = "0.4.0", optional = true }
dioxus-web = "0.4.0"
log = "0.4.19"
tokio = { version = "1.32.0", optional = true }
wasm-bindgen = { version = "0.2.87", features = ["enable-interning"] }
wasm-logger = "0.2.0"

[features]
# https://github.com/DioxusLabs/dioxus/issues/1330
prerender = ["dioxus-router/ssr", "dioxus-ssr", "tokio"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
