[package]
authors = ["Dallas Rust User Meetup Contributors"]
description = "Dallas Rust User Meetup website using Dioxus"
edition = "2021"
homepage = "https://www.dallasrust.org/"
keywords = ["dioxus"]
license = "MIT"
name = "website-dioxus"
publish = false
readme = "README.md"
repository = "https://github.com/dallasrust/website-dioxus"
version = "0.0.2-SNAPSHOT"

[[bin]]
name = "prerender"
required-features = ["prerender"]

[dependencies]
console_error_panic_hook = "0.1.7"
dioxus = "0.4.0"
dioxus-fullstack = { version = "0.4.1", optional = true }
dioxus-router = "0.4.1"
dioxus-web = "0.4.0"
log = "0.4.20"
serde = "1.0.192"
tokio = { version = "1.34.0", features = ["full"], optional = true }
wasm-logger = "0.2.0"

[features]
hydrate = ["dioxus-fullstack/router", "dioxus-web/hydrate"]
prerender = ["dioxus-fullstack/router", "dioxus-fullstack/ssr", "tokio"]
