[package]
authors = ["Dallas Rust User Meetup Contributors"]
description = "Dallas Rust User Meetup website using Dioxus"
edition = "2024"
homepage = "https://www.dallasrust.org/"
keywords = ["dioxus"]
license = "MIT"
name = "website-dioxus"
publish = false
readme = "README.md"
repository = "https://github.com/dallasrust/website-dioxus"
rust-version = "1.85.0"
version = "0.6.4-SNAPSHOT"

[dependencies]
dioxus = { version = "0.6.3", features = ["fullstack", "router"] }
serde = "1.0.219"
tracing = "0.1.41"

[features]
default = ["web"]
web = ["dioxus/web"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
